--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,28 @@
 Package: webreport
 Title: Creation of Reports on social media and website related information
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
-Depends: 
-    R (>= 3.4.3),
-    rmarkdown (>= 1.7)
+Depends: R (>= 3.4.3)
+Imports: 
+    RColorBrewer (>= 1.1.2),
+    RSQLite (>= 2.0),
+    Rfacebook (>= 0.6.15),
+    dplyr (>= 0.7.4),
+    ggplot2 (>= 2.2.1),
+    hellno (>= 0.0.1),
+    lubridate (>= 1.7.2),
+    qdap (>= 2.2.9),
+    rmarkdown (>= 1.7),
+    rvest (>= 0.3.2),
+    slam (>= 0.1-42),
+    stringr (>= 1.3.0),
+    tm (>= 0.7.3),
+    twitteR (>= 1.1.9),
+    wordcloud (>= 2.5),
+    xml2 (>= 1.1.1)
+SystemRequirements: Java 1.8 or above
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
