--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,11 @@ export(download_all_data)
 export(download_fb)
 export(download_tweets)
 export(download_website)
+export(generate_wordcloud)
 export(plain_dens_plot)
-export(return_text)
 export(show_tweets_containing)
 export(update_db)
+export(visualise_pol_diff)
 import(RSQLite)
 import(ggplot2)
 import(hellno)
