Fix package title

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: webreport
-Title: Creation of Reports on social media and website related information
+Title: Creation of Reports on Social Media and Website Related Data
 Version: 0.0.0.9003
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
