--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
     stringr (>= 1.3.0),
     tm (>= 0.7.3),
     twitteR (>= 1.1.9),
+    utils (>= 3.4.3),
     wordcloud (>= 2.5),
     xml2 (>= 1.1.1)
 SystemRequirements: Java 1.8 or above
