Add a new exported function
The functions enables a quick check on the expiry date of the Facebook access token.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(download_website)
 export(generate_wordcloud)
 export(plain_dens_plot)
 export(show_tweets_containing)
+export(token_expiry)
 export(visualise_pol_diff)
 import(RSQLite)
 import(ggplot2)
