--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: webreport
-Title: Creation of Reports on Social Media and Website Related Data
-Version: 0.1.0
+Title: Reporting on Social Media and Websites Made Easy
+Version: 0.1.1
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
