Introduce interactive Facebook token renewal
A function 'renew_fb_cred()' can now be used to refresh an expired Facebook access token. Some parameter adjustment was made to other related functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(download_all_data)
 export(download_fb)
 export(download_tweets)
 export(download_website)
+export(renew_fb_cred)
 export(token_expiry)
 import(RSQLite)
 import(ggplot2)
