--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: webreport
 Title: Reporting on Social Media and Websites Made Easy
-Version: 0.1.3
+Version: 0.2.0.9000
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
-Depends: R (>= 3.4)
+Depends:
+    R (>= 3.4),
+    SnowballC (>= 0.5.1)
 Imports: 
     RColorBrewer (>= 1.1.2),
     RSQLite (>= 2.0),
