Abstract away loading from the database

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,12 @@ import(hellno)
 import(rvest)
 import(tm)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(RSQLite,SQLite)
+importFrom(RSQLite,dbConnect)
+importFrom(RSQLite,dbDisconnect)
+importFrom(RSQLite,dbIsValid)
+importFrom(RSQLite,dbListTables)
+importFrom(RSQLite,dbReadTable)
 importFrom(RSQLite,dbWriteTable)
 importFrom(Rfacebook,fbOAuth)
 importFrom(Rfacebook,getPage)
