Launch Developer site on renewing FB token

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(twitteR,searchTwitter)
 importFrom(twitteR,search_twitter_and_store)
 importFrom(twitteR,setup_twitter_oauth)
 importFrom(twitteR,twListToDF)
+importFrom(utils,browseURL)
 importFrom(utils,menu)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
