--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: webreport
 Title: Reporting on Social Media and Websites Made Easy
-Version: 0.1.3
+Version: 0.1.4
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
-Depends: R (>= 3.4)
+Depends:
+    R (>= 3.4),
+    utils (>= 3.4.3)
 Imports: 
     RColorBrewer (>= 1.1.2),
     RSQLite (>= 2.0),
@@ -21,7 +23,6 @@ Imports:
     stringr (>= 1.3.0),
     tm (>= 0.7.3),
     twitteR (>= 1.1.9),
-    utils (>= 3.4.3),
     wordcloud (>= 2.5),
     xml2 (>= 1.1.1)
 SystemRequirements: Java 1.8 or above (both 32-bit & 64-bit)
