--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,16 @@
 export(build_webreport)
 export(collect_tweets)
 export(compare_mentions)
+export(dens_plot)
 export(download_all_data)
 export(download_fb)
 export(download_tweets)
 export(download_website)
+export(make_ts)
 export(renew_fb_cred)
 export(token_expiry)
 import(RSQLite)
+import(dplyr)
 import(ggplot2)
 import(hellno)
 import(rvest)
