Add ggplot time series
ggplot is now introduced as an option for presenting time series data.

Some changes were made in the file tree. Also documents rendered will be
ignored.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(download_tweets)
 export(download_website)
 export(make_ts)
 export(renew_fb_cred)
+export(show_datasets)
 export(token_expiry)
 import(RSQLite)
 import(dplyr)
@@ -17,6 +18,7 @@ import(ggplot2)
 import(hellno)
 import(rvest)
 import(tm)
+import(utils)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RSQLite,SQLite)
 importFrom(RSQLite,dbConnect)
