--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ importFrom(Rfacebook,getPage)
 importFrom(Rfacebook,getPost)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(graphics,barplot)
@@ -39,12 +40,14 @@ importFrom(graphics,dotchart)
 importFrom(graphics,layout)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(graphics,plot.new)
 importFrom(graphics,text)
 importFrom(qdap,polarity)
 importFrom(rmarkdown,render)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
+importFrom(stats,ts)
 importFrom(stringr,str_trim)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,removeWords)
