--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: webreport
 Title: Reporting on Social Media and Websites Made Easy
-Version: 0.2.0.9010
+Version: 0.2.0.9011
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
@@ -20,6 +20,7 @@ Imports:
     slam (>= 0.1-42),
     stringr (>= 1.3.0),
     tm (>= 0.7.3),
+    tools (>= 3.4.3),
     twitteR (>= 1.1.9),
     utils (>= 3.4.3),
     wordcloud (>= 2.5),
