--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(rmarkdown,render)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
 importFrom(stats,ts)
+importFrom(stats,window)
 importFrom(stringr,str_trim)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,removeWords)
