--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ import(ggplot2)
 import(hellno)
 import(rvest)
 import(tm)
-import(utils)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RSQLite,SQLite)
 importFrom(RSQLite,dbConnect)
@@ -57,6 +56,7 @@ importFrom(twitteR,searchTwitter)
 importFrom(twitteR,search_twitter_and_store)
 importFrom(twitteR,setup_twitter_oauth)
 importFrom(twitteR,twListToDF)
+importFrom(utils,View)
 importFrom(utils,browseURL)
 importFrom(utils,menu)
 importFrom(utils,setTxtProgressBar)
