--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: webreport
 Title: Reporting on Social Media and Websites Made Easy
-Version: 0.2.0.9012
+Version: 0.2.1
 Authors@R: person("Victor", "Ordu", email = "victorordu@outlook.com",
     role = c("aut", "cre"))
 Description: Build reports from social media and website data.
@@ -20,6 +20,7 @@ Imports:
     rmarkdown (>= 1.7),
     rvest (>= 0.3.2),
     slam (>= 0.1-42),
+    stats (>= 3.4.3)
     stringr (>= 1.3.0),
     tm (>= 0.7.3),
     tools (>= 3.4.3),
