--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Imports:
     rmarkdown (>= 1.7),
     rvest (>= 0.3.2),
     slam (>= 0.1-42),
-    stats (>= 3.4.3)
+    stats (>= 3.4.3),
     stringr (>= 1.3.0),
     tm (>= 0.7.3),
     tools (>= 3.4.3),
