--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,6 @@ importFrom(qdap,polarity)
 importFrom(rmarkdown,render)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
-importFrom(stats,ts)
 importFrom(stats,window)
 importFrom(stringr,str_trim)
 importFrom(tm,TermDocumentMatrix)
@@ -63,3 +62,4 @@ importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(wordcloud,comparison.cloud)
 importFrom(xml2,read_html)
+importFrom(zoo,zoo)
