--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,12 @@ importFrom(dplyr,select)
 importFrom(graphics,barplot)
 importFrom(graphics,dotchart)
 importFrom(graphics,layout)
+importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,plot.new)
+importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(qdap,polarity)
 importFrom(rmarkdown,render)
